# EvolutionSimulation

./: .pre-commit-config.yaml  Pylab_to_pygame.py  README.md  README_OPTIMIZATION.md  Useful_function.py  button.py  maiin.py  main.py  mypy.ini  oldest.txt  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  test.py
evolution_simulation/: __init__.py  constants.py  entities.py  game.py  state.py  ui.py  utils.py
