[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evolution-simulation"
version = "0.1.0"
description = "A pygame-based evolution simulation"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "pygame>=2.0.0",
    "numpy>=1.20.0",
]
requires-python = ">=3.8"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "pre-commit",
    "types-pygame",
    "types-numpy",
]

[tool.hatch.build.targets.wheel]
packages = ["evolution_simulation"]

[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["evolution_simulation"]
